--- a/style.css
+++ b/style.css
@@ -7,12 +7,14 @@
     display: flex;
     font-size: 26px;
     justify-content: center;
+    text-decoration: none;
 }
-
+    
 .bot{
     display: flex;
     font-size: 26px;
     justify-content: center;
+    text-decoration: none;
 }
 
 .number-phone{
@@ -24,9 +26,17 @@
     display: flex;
     font-size: 26px;
     justify-content: center;
-    text-decoration: none;
+    
 }
 .pon{
+    text-decoration: none;
+    color: #000000;
+}
+.botinok{
+    text-decoration: none;
+    color: #000000;
+}
+.telega-canal{
     text-decoration: none;
     color: #000000;
 }
